[tool.poetry]
name = "rss2wallabag"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.7"
wallabag-api = "^1.2.3"
feedparser = "6.0.2"
PyYAML = "^5.4"
requests = "^2.25.1"
sentry-sdk = "^0.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
